fixed main text alignment in mobile ver

--- a/styles.css
+++ b/styles.css
@@ -149,6 +149,7 @@ footer {
     main {
         margin-top: 100px;
     }
+
     #work_section {
         margin: 10px 30px;
         display: flex;
@@ -161,6 +162,7 @@ footer {
         background-color: rgb(255, 255, 255, 0.7);
         text-align: center;
         padding-left: 0;
+        width: auto;`
     }
     
     
